# FlaskWeb_Project_Root

./: .env.template  .env.vars  .gitignore  Dockerfile  LICENSE  PHASED_PLAN_GO_LIVE.md  README.md  Security_requirements.txt.txt  TODO.md  app.py  commit_msg.txt  config.env  debug_playwright_headers.py  docker-compose.choke.yml  docker-compose.ci.yml  docker-compose.db.yml  docker-compose.override.yml.template  docker-compose.pi.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  phased_plan.md  pip-audit-allowlist.txt  pyproject.toml  pytest.ini  robots.txt  vars_refactor.md
.github/: actionlint.yaml
.github/workflows/: pi-disposable-audit.yml  production-deploy.yml  test-deploy.yml
app/: server.py
app/models/: post.py  user.py
app/routes/: admin_routes.py  api_routes.py  auth_routes.py  main_routes.py
ci/: required-prod.env  required-staging.env  required-verify.env
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md  api-contract.yml  authorization-matrix.md
scripts/: check_db_connection.py  clean_orphaned_articles.py  clean_orphaned_posts.py  cleanup_uploads.py  clear_applog.py  create_admin.py  deploy.sh  drop_db.py  preflight.sh  preflight_ci.ps1  preflight_ci.sh  preflight_pi.sh  run_ci_tests.sh  run_staging_e2e.sh  run_staging_e2e_with_secrets.sh  seed_db.py  stress_test.py  sync_vars.ps1  utils.py
src/: events.py  exceptions.py  extensions.py  listeners.py  schemas.py  server.py
static/: app.js  style.css
templates/: base.html
tests/: conftest.py  test_database_connection.py
(+172 files in other folders)
